Fixes issue with not showing avatar of player

--- a/apps/chives-and-dill/src/app/player/playerIcon/PlayerIcon.module.scss
+++ b/apps/chives-and-dill/src/app/player/playerIcon/PlayerIcon.module.scss
@@ -11,7 +11,7 @@
     width: 85px;
     height: 85px;
     border: 5px solid gray;
-    // background-image: url("../../../assets/spritesheets/avatars/dogAvatar.PNG");
+    background: url("../../../assets/spritesheets/avatars/dogAvatar.png");
     background-repeat: no-repeat;
     background-size: cover;
     margin-right: 25px;
