--- a/apps/chives-and-dill/src/app/player/quests/questLog/QuestLog.module.scss
+++ b/apps/chives-and-dill/src/app/player/quests/questLog/QuestLog.module.scss
@@ -5,7 +5,7 @@
     height: 78%;
     top:15%;
     left:5%;
-    background: url("../../../assets/spritesheets/backgrounds/qlog.png");
+    background: url("../../../../assets/spritesheets/backgrounds/qlog.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     display: flex;
